<resources>
    <string name="add_item_to_inventory_string">Add Item to Inventory</string>
    <string name="add_to_cart_string">Add to Cart</string>
    <string name="app_name">ShopKeeper</string>
    <string name="back">↩ Back</string>
    <string name="business_name">Business Name</string>
    <string name="check_logs">Check Logs</string>
    <string name="check_records">Check Records</string>
    <string name="checkout_product">Checkout Product</string>
    <string name="close">Close</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_string">Confirm</string>
    <string name="content_quantity_string">Content / Quantity</string>
    <string name="continue_as_employee">Continue as Employee</string>
    <string name="continue_as_owner">Continue as Owner</string>
    <string name="continue_text">Continue</string>
    <string name="copy_text_to_clipboard">Copy Text to Clipboard</string>
    <string name="date_string">DATE</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">Light Theme</string>
    <string name="done_string">Done</string>
    <string name="edit_string">Edit</string>
    <string name="email_address">Email Address</string>
    <string name="email_sent_confirmation">We have sent an email message to your email address provided. The password reset message will be delivered to your Inbox or Spam Folder shortly.</string>
    <string name="email_tooltip">Your inputted Email Address will be used to sign in to the account</string>
    <string name="employee">Employee</string>
    <string name="employee_info">As an Employee, you are able to:\n-Manage inventories\n-Manage Reports\n-Checkout Products\n\nFor security, please input your Full Name and the Store Code provided by your Store Owner…</string>
    <string name="enter_full_name">Enter your Full Name</string>
    <string name="example_email_here_com_logged_in">example_email@here.com (Logged in)</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_app_id">153094382944442</string>
    <string name="fb_login_protocol_scheme">fb153094382944442</string>
    <string name="female">Female</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_string">Forgot Password</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_tooltip">Your full name is going to serve as your identifier within the system and the Store you\'re in.</string>
    <string name="fullName_tooltip">Your full name is going to serve as your identifier within the system</string>
    <string name="google">Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">Help</string>
    <string name="input_store_code">Input Store Code</string>
    <string name="item_barcode_string">Item Barcode</string>
    <string name="item_name_string">Item Name</string>
    <string name="log_in">Login</string>
    <string name="log_out">Log Out</string>
    <string name="male">Male</string>
    <string name="manage_inventory">Manage Inventory</string>
    <string name="manage_sales">Manage Sales</string>
    <string name="night_mode">Night Mode</string>
    <string name="owner">Owner</string>
    <string name="owner_info">As a Store Owner, you are responsible for:\n-Operational decision-making\n-Reviewing Sales\n-Overseeing daily activities and transactions, and\n-Managing inventories\n\nYou may set permissions manually in your Store for all your employees later in the Store Settings.</string>
    <string name="password">Password</string>
    <string name="password_tooltip">Your inputted Password will be used to sign in to the account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="product_unit_string">Prod. Unit: </string>
    <string name="profile_picture">Profile Picture</string>
    <string name="save_cloud_string">Save to Cloud</string>
    <string name="scan_string">Scan Item Code</string>
    <string name="select_your_role">Select your Role</string>
    <string name="send_email">Send Email</string>
    <string name="settings">Settings</string>
    <string name="show">SHOW</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_instead">Sign In Instead</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_account">Sign Up Account</string>
    <string name="sign_up_for_AppName_account">Sign Up for ShopKeeper Account</string>
    <string name="store_address">Store Address</string>
    <string name="store_address_hint">Enter your Store Address/Location <i>(Optional)</i>\n\n  House/Building Number and Street Name + Apartment/Suite/Room Number (if any) + Name of Town/City/Village + State Abbreviation + ZIP code\n\nEx: 3425 Stone Street, Apt. 2A, Jacksonville, FL 39404</string>
    <string name="store_code">Store Code</string>
    <string name="store_email_address_hint">Enter your Store\'s Email Address <i>(Optional)</i></string>
    <string name="store_name">Store Name</string>
    <string name="store_name_hint">Enter your Store Name</string>
    <string name="store_settings">Store Settings</string>
    <string name="supplier_string">Supplier</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="telephone_number_hint">Enter your Store\'s Telephone Number <i>(Optional)</i></string>
    <string name="total_price_string">Total Price</string>
    <string name="user_uid">User UID:</string>
    <string name="username">Username</string>
    <string name="username_hint">You can use letters, numbers &amp; periods</string>
    <string name="markup_percent_string">Markup (%)</string>
    <string name="zero_number_decimal">0.00</string>
    <string name="go_to_cart_string">Go to Cart</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="welcome_message"><b>Thank you for choosing ShopKeeper.</b>\n\n\nTo start, you are to:\nManage, Operate, Oversee, Review the Store with daily activities and transactions</string>

    <!-- Preference Titles -->
    <string name="theme">Theme</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="theme_select">Select Theme Preference</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="inventory_string">Inventory</string>
    <string name="total_products_string">Total Products</string>
    <string name="add_inventory_string">Add Inventory</string>
    <string name="sort_by">Sort by:</string>
    <string name="add_string">Add</string>
    <string name="sign_in_as_guest">Sign In as Guest</string>
    <string name="permission_settings">Permission Settings</string>
    <string name="permission_message_string">Application can not perform it\'s function without PERMISSIONS below. Please request and grant permissions from Android OS or go to your DEVICE SETTINGS and grant permissions manually.\n\n<b>CAMERA</b> - for capturing barcode items</string>
    <string name="pref_header_about">About</string>
    <string name="request_and_grant_permissions">REQUEST AND GRANT PERMISSIONS</string>
    <string name="category_string">Category</string>
    <string name="suppliers_string">Suppliers</string>
    <string name="add_supplier">+ ADD SUPPLIER</string>
    <string name="search_supplier">Search Supplier</string>
    <string name="checkout">Checkout</string>
    <string name="date_selected">Date Selected</string>
    <string name="select_date">Select Date</string>
    <string name="total_sold_in_cash">Total <b>Income</b> made : </string>
    <string name="total_sold_in_card">Total <b>Cost</b> made : </string>
    <string name="total_profit_string"><b>Total Profit</b> made : </string>
    <string name="remove_string">Remove</string>
    <string name="store_email_address">Store Email Address</string>
    <string name="account_string">Account</string>
    <string name="store_details_string">Store Details</string>
    <string name="month_and_year">Month &amp; Year</string>
    <string name="product_name">Product Name</string>
    <string name="qty_string">Qty</string>
    <string name="total">Total</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="price_info">Price Info</string>
    <string name="old_retail_selling_price">Old Retail Selling Price:</string>
    <string name="old_wholesale_selling_price">Old Wholesale Selling Price:</string>
    <string name="discard">Discard</string>
    <string name="add_item">Add Item</string>
    <string name="item_retail_price">Item Retail Price</string>
    <string name="item_wholesale_price">Item Wholesale Price</string>
    <string name="delete_permanently">Delete Account and Store\nPermanently</string>
    <string name="update_string">Update</string>
    <string name="name_string">Name</string>
    <string name="all_string">All</string>
    <string name="about_shopkeeper">About ShopKeeper</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="change_account_password">Change account password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="version">Version:</string>
    <string name="current_password">Current Password</string>
    <string name="add_num_stocks_string"><b>ADD</b> No. of Stock(s)</string>
    <string name="app_version">App Version</string>

    <string-array name="item_category">
        <item>All</item>
    </string-array>

</resources>