<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_marginBottom="10dp"
    android:forceDarkAllowed="false"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".RegisterStore">

    <LinearLayout
        android:id="@+id/storeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ownerRoleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/owner_role"
                    app:lottie_speed="2" />

                <TextView
                    android:id="@+id/ownerRoleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/made_tommy_bold"
                    android:text="Register your Store"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lottieAnimationView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_goneMarginEnd="30dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/storeNameTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/made_tommy_bold"
            android:gravity="center"
            android:text="@string/store_name"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/storeNameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:elevation="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <EditText
                android:id="@+id/storeNameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:autofillHints="@string/email_address"
                android:background="@null"
                android:fontFamily="@font/made_tommy_regular"
                android:gravity="center"
                android:hint="@string/store_name_hint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/field_gray"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/storeAddressTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/made_tommy_bold"
            android:gravity="center"
            android:text="@string/store_address"
            android:textColor="@color/black"
            android:textSize="22sp" />


        <LinearLayout
            android:id="@+id/storeAddressLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:elevation="1dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="10"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/storeAddressTextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:background="@null"
                android:fontFamily="@font/made_tommy_regular"
                android:gravity="start"
                android:hint="@string/store_address_hint"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textColorHint="@color/field_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/emailAddressTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/made_tommy_bold"
            android:gravity="center"
            android:text="@string/store_email_address"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/emailAddressLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:elevation="1dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/emailAddressTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:autofillHints="@string/email_address"
                android:background="@null"
                android:fontFamily="@font/made_tommy_regular"
                android:gravity="center"
                android:hint="@string/store_email_address_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/field_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/telephoneNumberTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/made_tommy_bold"
            android:gravity="center"
            android:text="@string/telephone_number"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/telephoneNumberLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:elevation="1dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/telephoneNumberTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:autofillHints="@string/email_address"
                android:background="@null"
                android:fontFamily="@font/made_tommy_regular"
                android:gravity="center"
                android:hint="@string/telephone_number_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/field_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/userFullNameTextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/made_tommy_bold"
            android:gravity="center"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/userFullNameLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:elevation="1dp"
            android:focusable="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/ownerFullNameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:autofillHints="@string/email_address"
                android:background="@null"
                android:fontFamily="@font/made_tommy_regular"
                android:gravity="center"
                android:hint="@string/enter_full_name"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/field_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/fullNameDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/made_tommy_regular"
            android:gravity="center"
            android:text="@string/full_name_tooltip"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#DAF7FF"
            android:fontFamily="@font/made_tommy_regular"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:singleLine="true"
            android:text="@string/confirm_string"
            android:textAllCaps="false"
            android:textColor="@color/dark_desaturated_blue"
            android:textSize="16sp"
            app:cornerRadius="5dp"
            app:strokeWidth="0.4dp" />
    </LinearLayout>

</ScrollView>